# hexerei

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  main.c  test.hex
.github/workflows/: test.yml
hexerei/: hexerei.c  hexerei.h  hexstr.c  record.c  record.h
lib/list/: list.h
test/: hexerei_test.c  record_test.c
